--- a/site/index.html
+++ b/site/index.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Hello coursera</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<link rel="stylesheet" href="styles.css">
+<title>Module 2 </title>
 </head>
 <body>
-<h1>Hello corsera</h1>
+	<h1>Our Menu</h1>
+   	<div class="row">
+		<div  class=" col-lg-4 col-md-6 col-sm-12">
+			<div class="section">
+				<span id="i1">Chicken</span> 
+				<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+			</div>
+		</div>
+		<div  class=" col-lg-4 col-md-6 col-sm-12 ">
+			<div class="section">
+				<span id="i2">Beef</span>				
+				<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+			</div>
+		</div>
+		<div  class="  col-lg-4  col-md-12 col-sm-12">
+			<div class="section">
+                <span id="i3">Sushi</span>
+				<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+			</div>
+		</div>
+	</div>
+
 </body>
 </html>
